[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]

[project]
name = "S1_NRB"
description = "A prototype processor for Sentinel-1 Analysis Ready Data (ARD) backscatter products"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
maintainers = [
    { name = "John Truckenbrodt", email = "john.truckenbrodt@dlr.de" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]
dynamic = ["version", "readme", "dependencies"]

[project.urls]
repository = "https://github.com/SAR-ARD/S1_NRB"
documentation = "https://s1-nrb.readthedocs.io/en/latest/"

[project.optional-dependencies]
test = ["pytest", "requests"]
docs = ["sphinx", "sphinxcontrib-bibtex", "nbsphinx", "sphinx_rtd_theme", "sphinx-toolbox", "ipython"]

[tool.setuptools]
packages = ["S1_NRB"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools_scm]

[project.scripts]
s1_nrb = "S1_NRB.cli:cli"
